[apollo-api] Parse Longs only once (#2473)
* set version to 3.0.0-alpha01

* remove Long and Float default adapters

* remove unused methods

* add a performance test

* add some float tests

* parse Longs only once

* update comments

* remove kotlinx-serialization

* restore the default scalar adapters

* add comments